# fengin-core

./: .gitmodules  CMakeLists.txt
include/: FenginCore.hpp  ecs.hpp  events.hpp
src/: FenginCore.cpp
src/Systems/: Log.cpp
